@@ -16,6 +16,7 @@ by Alex Rabe & NextGEN DEV Team
 * Changed : Support templates for child themes, use STYLESHEETPATH instead TEMPLATEPATH (THX to Prollius)
 * Bugfix : Check capability to create a new page
 * Bugfix : Fix double call of filter name , changed to ngg_picturelist_object (THX to Prollius)
+* Bugfix : Check for a deleted gallery in a album
 
 = V1.3.5 - 17.07.2009 =
 * Bugfix : Fixed XSS issue for Page title
